# faLinks

./: Dockerfile  README.md  main.py  pyproject.toml
falinks/: database.py  dependencies.py
falinks/model/: request.py  response.py  user.py  user_role.py
falinks/query/: user.py
falinks/router/: login.py  role.py  user.py
falinks/utils/: pydantic_base_class.py
